Feat: fix email link (will be overridden by the #711-#722 duo)

--- a/assets/templates/myeclpay_signed_tos_mail.html
+++ b/assets/templates/myeclpay_signed_tos_mail.html
@@ -7,7 +7,7 @@
 <p>
     Vous avez signé les Conditions Générales d'Utilisation de MyECLPay.
     Vous pouvez les consulter à tout moment en cliquant sur ce
-    <a href="https://myecl.fr/myeclpay/tos">lien</a>.
+    <a href="{{ tos_link }}">lien</a>.
 
     <br><br>
 
@@ -22,7 +22,7 @@
 <p>
     You signed the Terms of Service for MyECLPay.
     You can consult them at any time by clicking on this
-    <a href="https://myecl.fr/myeclpay/tos">link</a>.
+    <a href="{{ tos_link }}">link</a>.
 
     <br><br>
 
