--- a/assets/templates/raid_security_file.html
+++ b/assets/templates/raid_security_file.html
@@ -18,6 +18,9 @@
   </head>
 
   <body class="relative">
+    <div class="fixed top-0 left-0 w-5 h-full bg-green-700"></div>
+    <div class="fixed top-0 left-5 w-3 h-full bg-gray-300"></div>
+
     <div class="ml-6 mt-5">
       <div class="flex flex-col w-full justify-center">
         <div class="flex flex-row w-full">
@@ -29,7 +32,7 @@
             <span class="font-semibold">Pour le responsable sécurité</span>
           </div>
         </div>
-        <span class="ml-8 text-xl font-semibold text-green-700"
+        <span class="ml-8 mt-8 text-xl font-semibold text-green-700"
           >COORDONNÉES PERSONNELLES</span
         >
         <table
@@ -183,7 +186,7 @@
           </div>
           <img src="./../static/images/logo.png" alt="" class="h-52" />
         </div>
-        <span class="ml-8 text-xl font-semibold text-green-700"
+        <span class="ml-8 mt-8 text-xl font-semibold text-green-700"
           >COORDONNÉES PERSONNELLES</span
         >
         <table
